--- a/wf_repo_inven/wf_repo_inven.csproj
+++ b/wf_repo_inven/wf_repo_inven.csproj
@@ -162,9 +162,10 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\OptionLogin.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="App_Data\" />
+    <Folder Include="App_Data\imagen\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
